# mailhacker

./: LICENSE  README.md  pyproject.toml
mailhacker/: __main__.py  cli.py  util.py
mailhacker/commands/: attach.py  compose.py  dkim.py  send.py
